meta-memfault/recipes-memfault/memfaultd/files/memfaultd/src/metrics/system_metrics/snapshots/memfaultd__metrics__system_metrics__cpu__test__basic_delta_a_b_metrics.snap
---
source: memfaultd/src/metrics/system_metrics/cpu.rs
expression: result_b
---
[
  {
    "name": "cpu/cpu/percent/idle",
    "value": {
      "Histogram": {
        "value": 0.19231,
        "timestamp": "[timestamp]"
      }
    }
  },
  {
    "name": "cpu/cpu/percent/iowait",
    "value": {
      "Histogram": {
        "value": 0.0,
        "timestamp": "[timestamp]"
      }
    }
  },
  {
    "name": "cpu/cpu/percent/irq",
    "value": {
      "Histogram": {
        "value": 0.0,
        "timestamp": "[timestamp]"
      }
    }
  },
  {
    "name": "cpu/cpu/percent/nice",
    "value": {
      "Histogram": {
        "value": 2.88462,
        "timestamp": "[timestamp]"
      }
    }
  },
  {
    "name": "cpu/cpu/percent/softirq",
    "value": {
      "Histogram": {
        "value": 0.0,
        "timestamp": "[timestamp]"
      }
    }
  },
  {
    "name": "cpu/cpu/percent/system",
    "value": {
      "Histogram": {
        "value": 0.76923,
        "timestamp": "[timestamp]"
      }
    }
  },
  {
    "name": "cpu/cpu/percent/user",
    "value": {
      "Histogram": {
        "value": 96.15385,
        "timestamp": "[timestamp]"
      }
    }
  },
  {
    "name": "cpu_usage_pct",
    "value": {
      "Histogram": {
        "value": 99.80769,
        "timestamp": "[timestamp]"
      }
    }
  }
]
