meta-memfault/recipes-memfault/memfaultd/files/memfaultd/src/metrics/system_metrics/snapshots/memfaultd__metrics__system_metrics__cpu__test__basic_delta_b_c_metrics.snap
---
source: memfaultd/src/metrics/system_metrics/cpu.rs
expression: result_c.unwrap()
---
[
  {
    "name": "cpu/cpu/percent/user",
    "value": {
      "Histogram": {
        "value": 18.58736,
        "timestamp": "[timestamp]"
      }
    }
  },
  {
    "name": "cpu/cpu/percent/nice",
    "value": {
      "Histogram": {
        "value": 66.9145,
        "timestamp": "[timestamp]"
      }
    }
  },
  {
    "name": "cpu/cpu/percent/system",
    "value": {
      "Histogram": {
        "value": 13.3829,
        "timestamp": "[timestamp]"
      }
    }
  },
  {
    "name": "cpu/cpu/percent/idle",
    "value": {
      "Histogram": {
        "value": 0.74349,
        "timestamp": "[timestamp]"
      }
    }
  },
  {
    "name": "cpu/cpu/percent/iowait",
    "value": {
      "Histogram": {
        "value": 0.37175,
        "timestamp": "[timestamp]"
      }
    }
  },
  {
    "name": "cpu/cpu/percent/irq",
    "value": {
      "Histogram": {
        "value": 0.0,
        "timestamp": "[timestamp]"
      }
    }
  },
  {
    "name": "cpu/cpu/percent/softirq",
    "value": {
      "Histogram": {
        "value": 0.0,
        "timestamp": "[timestamp]"
      }
    }
  }
]
