meta-memfault/recipes-memfault/memfaultd/files/memfaultd/src/metrics/system_metrics/snapshots/memfaultd__metrics__system_metrics__cpu__test__test_basic_line_with_extra.snap
---
source: memfaultd/src/metrics/system_metrics/cpu.rs
expression: "CpuMetricCollector::parse_proc_stat_line_cpu(proc_stat_line).unwrap()"
---
[
  "cpu0",
  [
    1000.0,
    5.0,
    0.0,
    0.0,
    2.0,
    0.0,
    0.0
  ]
]
